# src/app/server/packages/Event/Application/Admin/UseCase/Create/CreateUseCase.php
@@ -40,6 +40,7 @@ readonly class CreateUseCase
                 $inputData->isDisplay,
                 $inputData->venues,
                 $inputData->media,
+                $inputData->releases,
                 $inputData->sources,
                 $inputData->performances,
                 $inputData->setlist,
