# src/app/server/packages/Release/Domain/Models/ReleaseGroupRepositoryInterface.php
@@ -8,6 +8,11 @@ interface ReleaseGroupRepositoryInterface
 {
     public function find(ReleaseGroupId $releaseGroupId): ?ReleaseGroup;
 
+    /**
+     * @return list<ReleaseGroup>
+     */
+    public function findByIds(ReleaseGroupId ...$releaseGroupIds): array;
+
     public function save(ReleaseGroup $releaseGroup): ReleaseGroup;
 
     public function delete(ReleaseGroupId $releaseGroupId): void;
